// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not show current 1`] = `
<PageCounter
  className="spacer-left flash flash-heavy"
  label="issues.issues"
  total={987654321}
/>
`;

exports[`formats numbers 1`] = `
<PageCounter
  className="spacer-left flash flash-heavy"
  current={1234}
  label="issues.issues"
  total={987654321}
/>
`;
